# meeting-notes

./: .gitignore  LICENSE  README.md  pyproject.toml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md
.planning/debug/: knowledge-base.md
.planning/debug/resolved/: meet-doctor-missing-pyannote-checks.md  meet-init-update-flag-missing.md  meet-summarize-notion-title-missing-recording-name.md  pyannote-not-installed.md
.planning/milestones/: v1.0-REQUIREMENTS.md  v1.0-ROADMAP.md  v1.1-ROADMAP.md  v1.2-REQUIREMENTS.md  v1.2-ROADMAP.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
meeting_notes/: __init__.py
meeting_notes/cli/: __init__.py  main.py  ui.py
meeting_notes/core/: __init__.py  config.py  health_check.py  process_manager.py  state.py  storage.py
meeting_notes/gui/: app.py  main_window.py  theme.py
meeting_notes/services/: __init__.py  audio.py  checks.py  llm.py  notion.py  transcription.py
meeting_notes/templates/: 1on1.txt  meeting.txt  minutes.txt
tests/: conftest.py  test_audio.py  test_checks.py  test_cli_list.py  test_cli_ui.py  test_config.py  test_doctor_command.py  test_gui_app.py  test_gui_dashboard.py  test_gui_main_window.py  test_gui_sessions.py  test_gui_theme.py  test_gui_workers.py  test_health_check.py  test_init.py  test_llm_service.py  test_notion_checks.py  test_notion_service.py  test_process_manager.py  test_record_command.py  test_state.py  test_storage.py  test_summarize_command.py  test_transcribe_command.py  test_transcription.py
(+161 files in other folders)
