[project]
name = "meeting-notes"
version = "0.1.0"
description = "Local meeting capture, transcription, and Notion notes"
requires-python = ">=3.11,<3.15"
dependencies = [
    "click>=8.1",
    "mlx-whisper",
    "requests>=2.28",
    "rich>=13.0",
]

[project.scripts]
meet = "meeting_notes.cli.main:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
